# py-aamva-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aamva_parser/: __init__.py  compat.py  enums.py  field_mapping.py  field_parser.py  license.py  parsed_license.py  parser.py  regex_util.py  version_field_parsers.py  version_mappers.py
tests/: test_compat.py  test_field_mapping.py  test_field_parser.py  test_index_api.py  test_license.py  test_parse_api.py  test_parsed_license_type.py  test_parser_versions.py  test_regex.py  test_version_field_parsers.py
