[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aamva-parser"
dynamic = ["version"]
description = "Parse AAMVA PDF417 barcode data from US and Canadian driver's licenses and ID cards (Python port of aamva-parser)."
readme = "README.md"
requires-python = ">=3.10"
license = "ISC"
license-files = ["LICENSE"]
authors = [{ name = "Ashok Modi" }]
maintainers = [{ name = "btmash" }]
keywords = ["aamva", "pdf417", "barcode", "driver-license", "usdl", "id-parser"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/btmash/py-aamva-parser"
Documentation = "https://github.com/btmash/py-aamva-parser#readme"
Repository = "https://github.com/btmash/py-aamva-parser"
Issues = "https://github.com/btmash/py-aamva-parser/issues"
"GitHub profile" = "https://github.com/btmash"
Upstream = "https://github.com/joptimus/aamva-parser"

[project.optional-dependencies]
dev = ["build>=1.2", "mypy>=1.8", "pytest>=7.0", "ruff>=0.8", "twine>=5.0"]

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Omit +g<hash>.d<date> so dev wheels pass strict PyPI checks in CI; tags still yield e.g. 0.2.0.
local_scheme = "no-local-version"

[tool.setuptools.package-data]
aamva_parser = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"src/aamva_parser/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
mypy_path = "src"
packages = ["aamva_parser"]
warn_return_any = true
warn_unused_configs = true
strict_optional = true
show_error_codes = true
